--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "HotPage - Customizable Homepage",
   "short_name": "HotPage",
-  "version": "0.1.3",
+  "version": "0.1.3.2",
   "description": "A fully customizable browser homepage with widgets, themes, sticky notes, todo list, and personalization options.",
   "minimum_chrome_version": "100",
   "icons": {
@@ -23,11 +23,22 @@
     "geolocation",
     "search"
   ],
+  "optional_permissions": [
+    "windows"
+  ],
   "host_permissions": [
-    "*://*/"
+    "https://api.open-meteo.com/*",
+    "https://api.exchangerate-api.com/*",
+    "https://api.coingecko.com/*",
+    "https://nominatim.openstreetmap.org/*",
+    "https://api.nbp.pl/*",
+    "https://ipapi.co/*"
   ],
   "background": {
-    "service_worker": "background.js"
+    "service_worker": "background.js",
+    "scripts": [
+      "background.js"
+    ]
   },
   "web_accessible_resources": [
     {
